# artus

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
artus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
artus/evaluate_model/: coco_stats.py  write_eval_results.py
artus/inference/: config.py  deploy_unlabeled_dataset.py  predict.py
artus/prepare/: coco_splitting.py  crs_settings.py  transform_geojson_to_coco.py
artus/spatialize/: GeoCOCOExporter.py  GeoFiftyoneExporter.py  LocationImporter.py
artus/train/: train.py  validation_hook.py
docs/: artus.evaluate_model.rst  artus.inference.rst  artus.prepare.rst  artus.rst  artus.spatialize.rst  common.txt  conf.py  images_with_GPS_point.ipynb  index.rst  installation.rst  make_doc.sh  modules.rst  rasters_images.ipynb  requirements.txt
docs/_build/doctrees/: artus.doctree  artus.evaluate_model.doctree  artus.inference.doctree  artus.prepare.doctree  artus.spatialize.doctree  artus.train.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  artus.evaluate_model.html  artus.html  artus.inference.html  artus.prepare.html  artus.spatialize.html  artus.train.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: artus.prepare.rst.txt  artus.train.rst.txt  index.rst.txt
docs/source/: conf.py  index.rst
src/artus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/artus/data_pre_processing/: clip_annotated_ortho.py  data_splitting.py  tile.py  transform_geoson_to_coco.py
src/artus/evaluate_model/: coco_stats.py  evaluate.py  write_eval_results.py
src/artus/inference/: config.py  deploy_unlabeled_dataset.py  predict.py
src/artus/model_training/: config.py  train.py  validation_hook.py
src/artus/prepare/: coco_splitting.py  crs_settings.py  tile.py  transform_geoson_to_coco.py
src/artus/spatialize/: GeoCOCOExporter.py  GeoFiftyoneExporter.py  export.py  spatialize_coco.py  transform.py
src/artus/train/: build_trainer.py  config.py  data_augmentation.py  train.py  validation_hook.py
