[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "artus"
version = "0.2.1"
authors = [
  { name="Justine Talpaert Daudon", email="justine.daudon@protonmail.com" },
]
description = "A geoAI package to train and predict spatial occurences on rasters or georeferenced images."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fiftyone>=0.19.1",
    "torch>=1.12.1",
    "torchmetrics>=0.9.3",
    "torchvision>=0.13.1",
    "geopandas>=0.13.0",
    "Fiona==1.8.22",
    "importlib-metadata==6.1.0",
    "importlib-resources==5.7.1",
    "joblib==1.2.0",
    "matplotlib>=3.5.0",
    "numpy>=1.18.1",
    "opencv-python>4.6.0",
    "pandas>=1.5.2",
    "Pillow>=9.2.0",
    "plotly>=5.13.0",
    "pycocotools>=2.0.6",
    "pylabel>=0.1.51",
    "pymongo==4.3.3",
    "PyYAML>=5.0.0",
    "rasterio>=1.3.3",
    "scikit-learn>=1.2.2",
    "scipy>=1.9.3",
    "shapely>=1.8.5",
    "tensorboard>=2.12.0",
    "tqdm>=4.65.0",
]

[project.urls]
"Homepage" = "https://github.com/6tronl/artus"
"Bug Tracker" = "https://github.com/6tronl/artus/issues"
"Tutorials" = "https://github.com/6tronl/artus-examples"
"Documentation" = "https://artus.readthedocs.io/en/latest/"